--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="card">
     <img src="./assets/images/illustration-article.svg" alt="">
-    <button class="card-header">Learning</button>
+    <div class="card-header">Learning</div>
     <div class="card-content">
       <p class="date">Published 21 Dec 2023</p>
       <h1 class="title">HTML & CSS foundations</h1>
