--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   
   <title>Frontend Mentor | Blog preview card</title>
 </head>
 <body>
   <div class="card">
-    <img src="./assets/images/illustration-article.svg" alt="">
+    <img src="illustration-article.svg" alt="">
     <div class="card-header">Learning</div>
     <div class="card-content">
       <p class="date">Published 21 Dec 2023</p>
@@ -19,7 +19,7 @@
         These languages are the backbone of every website, defining structure, content, and presentation.
       </p>
       <div class="author">
-        <p><img class="img" src="./assets/images/image-avatar.webp" alt=""> Greg Hooper</p>
+        <p><img class="img" src="image-avatar.webp" alt=""> Greg Hooper</p>
       </div>
     </div>
   
